fix slick buttons from spilling over because I added an extra dice

--- a/css/style.css
+++ b/css/style.css
@@ -186,6 +186,33 @@ h1 {
 	opacity: 0.3;
 }
 
+/*tablet*/
+/*@media (max-width: 768px) {
+	#output {
+		padding: 34px 5%;
+		font-size: 35px;
+		margin-bottom: 0px;
+	}
+	#nav-wrapper {
+		width: 200px;
+	}
+	.btn-nav {
+		width: 100px;
+		height: 100px;
+	}
+	#dice-wrapper {
+		width: 210px;
+	}
+	.dice {
+		width: 190px;
+		height: 190px;
+		opacity: 1.0;
+	}
+	.btn-nav {
+		opacity: 1;
+	}
+}
+*/
 /*mobile*/
 
 @media (max-width: 425px) {
@@ -202,7 +229,7 @@ h1 {
 		height: 100px;
 	}
 	#dice-wrapper {
-		width: 200px;
+		width: 210px;
 	}
 	.dice {
 		width: 190px;
